@@ -161,6 +161,7 @@
 	<last_modification_time>Sat, 10 Feb 2001 21:26:10 GMT</last_modification_time>
       </signal>
       <label>New Account (child of selected) ...</label>
+      <relief>GTK_RELIEF_NORMAL</relief>
       <child>
 	<padding>0</padding>
 	<expand>False</expand>
@@ -330,6 +331,7 @@ worry if your data is in multiple files.
 	      <last_modification_time>Wed, 30 Aug 2000 17:33:50 GMT</last_modification_time>
 	    </signal>
 	    <label>Select...</label>
+	    <relief>GTK_RELIEF_NORMAL</relief>
 	    <child>
 	      <padding>3</padding>
 	      <expand>False</expand>
@@ -351,9 +353,9 @@ worry if your data is in multiple files.
       </signal>
       <signal>
 	<name>back</name>
-	<handler>gnc_ui_qif_import_generic_back_cb</handler>
+	<handler>gnc_ui_qif_import_default_acct_back_cb</handler>
 	<data>QIF_Import_Druid</data>
-	<last_modification_time>Tue, 06 Feb 2001 17:06:44 GMT</last_modification_time>
+	<last_modification_time>Wed, 04 Jul 2001 22:27:27 GMT</last_modification_time>
       </signal>
       <title>Set a date format for this QIF file</title>
       <title_color>255,255,255</title_color>
@@ -424,6 +426,24 @@ US QIF files are likely to be &quot;m-d-y&quot; or month-year-day.
 	    <text_max_length>0</text_max_length>
 	    <text></text>
 	  </widget>
+	</widget>
+
+	<widget>
+	  <class>GtkLabel</class>
+	  <name>label847713</name>
+	  <label>Click &quot;Back&quot; to cancel the loading of this file and choose another.</label>
+	  <justify>GTK_JUSTIFY_CENTER</justify>
+	  <wrap>False</wrap>
+	  <xalign>0.5</xalign>
+	  <yalign>0.5</yalign>
+	  <xpad>0</xpad>
+	  <ypad>0</ypad>
+	  <child>
+	    <padding>0</padding>
+	    <expand>False</expand>
+	    <fill>False</fill>
+	    <pack>GTK_PACK_END</pack>
+	  </child>
 	</widget>
       </widget>
     </widget>
@@ -526,6 +546,24 @@ in that program.
 	      <fill>True</fill>
 	    </child>
 	  </widget>
+	</widget>
+
+	<widget>
+	  <class>GtkLabel</class>
+	  <name>label847714</name>
+	  <label>Click &quot;Back&quot; to cancel the loading of this file and choose another.</label>
+	  <justify>GTK_JUSTIFY_CENTER</justify>
+	  <wrap>False</wrap>
+	  <xalign>0.5</xalign>
+	  <yalign>0.5</yalign>
+	  <xpad>0</xpad>
+	  <ypad>0</ypad>
+	  <child>
+	    <padding>0</padding>
+	    <expand>False</expand>
+	    <fill>False</fill>
+	    <pack>GTK_PACK_END</pack>
+	  </child>
 	</widget>
       </widget>
     </widget>
@@ -664,6 +702,7 @@ of the QIF import process. </label>
 	      <last_modification_time>Wed, 30 Aug 2000 15:32:12 GMT</last_modification_time>
 	    </signal>
 	    <label>Load another file</label>
+	    <relief>GTK_RELIEF_NORMAL</relief>
 	    <child>
 	      <padding>0</padding>
 	      <expand>True</expand>
@@ -682,6 +721,7 @@ of the QIF import process. </label>
 	      <last_modification_time>Wed, 30 Aug 2000 15:34:33 GMT</last_modification_time>
 	    </signal>
 	    <label>Unload selected file</label>
+	    <relief>GTK_RELIEF_NORMAL</relief>
 	    <child>
 	      <padding>0</padding>
 	      <expand>True</expand>
